codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__composer_minimal_borders_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1400
expression: "render_snapshot(&pane, area)"
---
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
                                                
› Ask xcodex to do anything                     
                                                
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  ? for shortcuts            100% context left
